--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+name: Minify JS
 
 on:
   push:
@@ -22,3 +22,6 @@ jobs:
     steps:
       - name: Auto Minify
         uses: nizarmah/auto-minify@v2.1.1
+        with:
+          directory: JS
+          output: min_js
