--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,21 +1,15 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
 name: Minify JS
 
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 jobs:
-  build:
-
+  minify:
     runs-on: ubuntu-latest
     steps:
       - name: Auto Minify
         uses: nizarmah/auto-minify@v2.1.1
         with:
-          directory: JS
-          output: min_js
+          directory: "JS"
+          output: "min_js"
