--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,4 +13,5 @@ jobs:
       - name: Auto Minify
         uses: nizarmah/auto-minify@v2.1.1
         with:
-          directory: "JS/script.js"
+          directory: "JS"
+          output: "min_js"
