--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -84,5 +84,5 @@ jobs:
       - name: Auto committing minified files
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: "Github Action: Auto Minified JS and CSS files"
+          commit_message: "Github Action: Auto Minified HTML/CSS/JS files"
           branch: ${{ github.ref }}
